# TPFinalAyDAII

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  electronPackageJSONGenerator.js  generateDistributables.js  package-lock.json  package.json
docs/: Algoritmos.mdk  ImplementacionAlgoritmos.mdk  Introduccion.mdk  informe.mdk
docs/anexo/tda/: Lista.mdk  Pila.mdk  Punto.mdk  RBTree.mdk  Segmento.mdk  Vector.mdk
src/native/cpp/: cli.cpp  wasm.cpp
src/native/cpp/algor/: SimplePolygon.cpp  Vector.cpp
src/native/cpp/algor/ClosestPairOfPoints_impl/: algorithm.cpp
src/native/cpp/algor/SimplePolygon_impl/: Edge.cpp  TreeNode.cpp  Vertex.cpp
src/native/cpp/cli/: constants.cpp  init_utils.cpp  logger_setup.cpp
src/native/cpp/include/algor/: AnySegmentsIntersect.hpp  Array.hpp  ClosestPairOfPoints.hpp  Comparator.hpp  ComparisonResult.hpp  GeometricObject.hpp  GrahamScan.hpp  JarvisMarch.hpp  List.hpp  Point.hpp  RBTree.hpp  Segment.hpp  SimplePolygon.hpp  Stack.hpp  UnaryComparator.hpp  Vector.hpp
src/native/cpp/include/algor/ClosestPairOfPoints_impl/: algorithm.hpp
src/native/cpp/include/algor/List_impl/: ConstIterator.hpp  Iterator.hpp  Node.hpp
src/native/cpp/include/algor/RBTree_impl/: Color.hpp  ConstIterator.hpp  DataNode.hpp  Iterator.hpp  Nil.hpp  Node.hpp
src/native/cpp/include/algor/SimplePolygon_impl/: Edge.hpp  TreeNode.hpp  Vertex.hpp
src/native/cpp/include/cli/: OutputWriter.hpp  constants.hpp  execute_algorithms.hpp  init_utils.hpp  logger_setup.hpp
src/native/cpp/include/file_loaders/: FileLoader.hpp  InputParser.hpp  SolutionParser.hpp  TestCasesLoader.hpp
src/native/cpp/include/file_loaders/Parser_impl/: ParserShared.hpp
src/native/cpp/include/file_loaders/TestCasesLoader_impl/: SolutionDirNames.hpp
src/native/cpp/include/logger/: Logger.hpp
src/native/cpp/include/logger/Logger_impl/: LogTypes.hpp  Message.hpp
src/native/cpp/include/wasm_bindings/: algorithms.hpp  data_input.hpp  errors.hpp  utils.hpp
src/native/cpp/logger/: Logger.cpp
src/native/cpp/logger/Logger_impl/: Message.cpp
src/native/cpp/test_cases/TestCasesLoader_impl/: ParserShared.cpp
src/native/cpp/tests/: Test.hpp
src/native/cpp/tests/algor/: AnySegmentsIntersect.cpp  Array.cpp  ClosestPairOfPoints.cpp  GrahamScan_JarvisMarch.cpp  List.cpp  Point.cpp  RBTree.cpp  Segment.cpp  Stack.cpp  TestsLoaderCommon.hpp  Vector.cpp
src/native/cpp/tests/impl/: tests.cpp  tests_init.cpp
src/native/cpp/wasm_bindings/: any_segments_intersect.cpp  closest_points.cpp  data_input.cpp  errors.cpp  graham_scan.cpp  jarvis_march.cpp  simple_polygon_algorithms.cpp  utils.cpp
src/web/: appError.html  electron-startup.js  index.html
src/web/css/: algorithm_result_tools.css  app.css  drop_file_overlay.css  main.css  mouse_tooltip.css  sidebar.css  sidebar_algorithms.css  sidebar_common.css  sidebar_footer.css  sidebar_pointsList.css  sidebar_tools.css  status_bar.css  update_message.css
src/web/js/: appLoader.js  appStateFreeze.js  fileDropSetup.js  fileLoad.js  fileSave.js  logger.js  main.js  statusBar.js  toolsSetup.js  updateChecker.js
src/web/js/classes/: Algorithms.js  Arrow.js  Context.js  GOGroup.js  GeometricObject.js  InputFileParser.js  Logger.js  Observable.js  Point.js  PointsList.js  Segment.js  Stage.js  StatusBar.js
src/web/js/classes/algorithms/: Algorithm.js  AlgorithmRunner.js  AnySegmentsIntersect.js  ArtGalleryProblemOverSimplePolygon.js  ClosestPairOfPoints.js  GrahamJarvisBase.js  GrahamScan.js  JarvisMarch.js  SimplePolygonAlgorithmsBase.js  SimplePolygonPartitionIntoMonotone.js  SimplePolygonTriangulation.js
src/web/js/classes/stage/: StageTools.js  ZoomHandler.js
src/web/js/classes/stage/stages/: AxesStage.js  InteractiveStage.js  (+5 more)
src/web/js/filesSupport/: fileLoad.js  fileParser.js  fileSave.js
src/web/js/setup/: canvasSetup.js  fileDropSetup.js  statusBarLoggerSetup.js  toolsSetup.js
src/web/js/stage/: Axes.js
src/web/js/stage/tools/: Pan.js
src/web/js/ui/: UISetup.js  algorithmResult.js  fileDrop.js  pointsList.js  statusBar.js  tools.js
src/web/js/ui/tools/: algorithmSelector.js  clearAllButton.js  loadFileButton.js  saveFileButton.js  stageTools.js  undoRedoButtons.js
test_cases/: Test1.txt  Test2.txt  Test3.txt
test_cases/closest_points/: Test3.sol.txt
test_cases/convex_hull/: Test1.sol.txt  Test2.sol.txt  Test3.sol.txt
(+7 files in other folders)
